added more algo

--- a/Sorting-and-Searching-Visualizer/search.html
+++ b/Sorting-and-Searching-Visualizer/search.html
@@ -18,6 +18,8 @@
 		<div class="pages">
 			<a href="index.html">Sorting</a>
 			<a href="search.html">Searching</a>
+			<a href="graph.html">Graph</a>
+            <a href="puzzle.html">Puzzles</a>
 		</div>
 	</div>
 
