--- a/Sorting-and-Searching-Visualizer/index.html
+++ b/Sorting-and-Searching-Visualizer/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Sorting Visualizer || Kelompok 3</title>
+    <title>Sorting Visualizer</title>
 </head>
 
 <body>
@@ -18,6 +18,8 @@
         <div class="pages">
             <a href="index.html">Sorting</a>
             <a href="search.html">Searching</a>
+            <a href="graph.html">Graph</a>
+            <a href="puzzle.html">Puzzles</a>
         </div>
     </div>
 
